Changelog
=========

1.0 - Unreleased
----------------

* Split out 404 auto-suggestion tests into a separate file and disabled them
  under Plone 4 - the feature is no longer part of Plone.
  [hannosch]

* Fixed error handling code to deal with different exception string
  representations in Python 2.6.
  [hannosch]

* Made tests independent of the ``Large Folder`` content type, as it no longer
  exists in Plone 4.
  [hannosch]

* Avoid using the incompatible TestRequest from zope.publisher inside Zope 2.
  [hannosch]

* Fixed undefined variables in ``search.pt`` for Plone 4 compatibility.
  [hannosch]


1.0rc2 - Released August 31, 2010
---------------------------------

* Fix regression about catalog fallback with required, but empty parameters.
  [tesdal, witsch]


1.0rc1 - Released July 30, 2010
-------------------------------

* Handle broken or timed out connections during schema retrieval gracefully.
  Refs http://plone.org/products/collective.solr/issues/23
  [ftoth, witsch]


1.0b24 - Released July 29, 2010
-------------------------------

* Fix security issue with `getObject` on Solr flares, which used unrestricted
  traversal on the entire path, potentially leading to information leaks.
  Refs http://plone.org/products/collective.solr/issues/27
  [pilz, witsch]

* Add missing `CreationDate` method to flares.
  This fixes http://plone.org/products/collective.solr/issues/16
  [witsch]

* Add logging for slow queries along with the query time as reported by Solr.
  [witsch]

* Limit number of matches looked up during live search for speedier replies.
  [witsch]

* Renamed the batch parameters to ``b_start`` and ``b_size`` to avoid
  conflicts with index names and be consistent with existing template code.
  [do3cc]

* Added a new config option ``auto-commit`` which is enabled by default. You
  can disable this, which avoids any explicit commit messages to be sent to
  the Solr server by the client. You have to configure commit policies on