@@ -31,6 +31,7 @@ class SolrConfigXMLAdapter(XMLAdapterBase):
         self.context.base = ''
         self.context.async = False
         self.context.auto_commit = True
+        self.context.commit_within = 0
         self.context.index_timeout = 0
         self.context.search_timeout = 0
         self.context.max_results = 0
@@ -66,6 +67,9 @@ class SolrConfigXMLAdapter(XMLAdapterBase):
                 elif child.nodeName == 'auto-commit':
                     value = str(child.getAttribute('value'))
                     self.context.auto_commit = self._convertToBoolean(value)
+                elif child.nodeName == 'commit-within':
+                    value = int(child.getAttribute('value'))
+                    self.context.commit_within = value
                 elif child.nodeName == 'index-timeout':
                     value = float(str(child.getAttribute('value')))
                     self.context.index_timeout = value
@@ -114,6 +118,7 @@ class SolrConfigXMLAdapter(XMLAdapterBase):
         append = settings.appendChild
         append(create('async', str(bool(self.context.async))))
         append(create('auto-commit', str(bool(self.context.auto_commit))))
+        append(create('commit-within', str(self.context.commit_within)))
         append(create('index-timeout', str(self.context.index_timeout)))
         append(create('search-timeout', str(self.context.search_timeout)))
         append(create('max-results', str(self.context.max_results)))
