@@ -32,6 +32,11 @@ class ISolrSchema(Interface):
                        'index. If you disable this, you need to configure '
                        'commit policies on the Solr server side.'))
 
+    commit_within = Int(title=_(u'Commit within'), default=0,
+        description=_(u'Number of milliseconds in which a commit should be '
+                       'processed by Solr. Defaults to 0, meaning immediate '
+                       'commit. This feature requires a Solr 1.4 server.'))
+
     index_timeout = Float(title=_(u'Index timeout'),
         description=_(u'Number of seconds after which an index request will '
                        'time out. Set to "0" to disable timeouts.'))
