@@ -24,6 +24,7 @@ class BaseSolrConnectionConfig(object):
         self.base = None
         self.async = False
         self.auto_commit = True
+        self.commit_within = 0
         self.index_timeout = 0
         self.search_timeout = 0
         self.max_results = 0
@@ -37,6 +38,7 @@ class SolrConnectionConfig(BaseSolrConnectionConfig, Persistent):
 
     max_results = 0             # provide backwards compatibility
     auto_commit = True
+    commit_within = 0
     required = ()
     facets = ()
     filter_queries = ()
