@@ -17,6 +17,7 @@ class SetupToolTests(SolrTestCase, TarballTester):
         config.base = '/bar'
         config.async = False
         config.auto_commit = True
+        config.commit_within = 1000
         config.index_timeout = 7
         config.search_timeout = 3.1415
         config.max_results = 42
@@ -39,6 +40,7 @@ class SetupToolTests(SolrTestCase, TarballTester):
         self.assertEqual(config.base, '/solr')
         self.assertEqual(config.async, False)
         self.assertEqual(config.auto_commit, True)
+        self.assertEqual(config.commit_within, 1000)
         self.assertEqual(config.index_timeout, 0)
         self.assertEqual(config.search_timeout, 0)
         self.assertEqual(config.max_results, 0)
@@ -90,6 +92,7 @@ SOLR_XML = """\
   <settings>
     <async value="False" />
     <auto-commit value="True" />
+    <commit-within value="1000" />
     <index-timeout value="7" />
     <search-timeout value="3.1415" />
     <max-results value="42" />
